--- a/public/scss/component/_header.scss
+++ b/public/scss/component/_header.scss
@@ -776,7 +776,7 @@
   }
 }
 
-.header-bottom .box-nav-ul .menu-item {
+.header-bottom .box-.menu-item {
   padding: 20px 0px;
   > a::after {
     height: 64px;
